@@ -1,5 +1,6 @@
 Changelog for GitPackageManagement.
 
+- Don't create build config anymore
 - Add default value and input options to TV
 - Fixed extension package resolver
 - Better error handling
